# vlog-cut

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: known-issues.md
docs/tutorials/: quick-start.md
shared/: ffmpeg_helpers.py
shared/schemas/: assets_index.schema.json  script.schema.json  state.schema.json  subs_pages.schema.json  timeline.schema.json  timing.schema.json
skills/align_narration/: SKILL.md  align.py
skills/burn_subtitles_cn/: SKILL.md  build.py  burn.py  split.py
skills/narration_cut/: SKILL.md  plan.py  render.py  validate.py
skills/tts_from_script/: SKILL.md  tts.py
skills/video_asset_index/: SKILL.md  index.py
skills/vlog_cut_pipeline/: SKILL.md
tests/: conftest.py  test_align_narration.py  test_burn_subtitles_cn.py  test_ffmpeg_helpers.py  test_integration.py  test_narration_cut_plan.py  test_narration_cut_render.py  test_narration_cut_validate.py  test_tts_from_script.py  test_video_asset_index.py
